--- a/southpoint_roi_bg.html
+++ b/southpoint_roi_bg.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Keyshape -->
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1210 524" text-rendering="geometricPrecision" shape-rendering="geometricPrecision" style="white-space: pre;">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1210 569" text-rendering="geometricPrecision" shape-rendering="geometricPrecision" style="white-space: pre;">
     <defs>
         <linearGradient id="Gradient-0" x1="-828.949" y1="639.426" x2="-827.978" y2="639.426" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1065.52 0 0 -1065.52 882870 681392)">
             <stop offset="0" stop-color="#98735c"/>
@@ -57,6 +57,15 @@
                 <path id="Dot" d="M119,6C119,9.31,121.69,12,125,12C128.31,12,131,9.31,131,6C131,2.69,128.31,0,125,0C121.69,0,119,2.69,119,6" transform="translate(125,6) translate(-125,-6)"/>
             </g>
         </g>
+    </g>
+    <g id="Highett" class="st0" opacity="0.51" transform="translate(604,563.38) translate(-45.735,-5.62)">
+        <path id="path-1" d="M0,0.23L1.53,0.23L1.53,4.59L8.01,4.59L8.01,0.23L9.54,0.23L9.54,11.01L8.02,11.01L8.02,5.88L1.53,5.88L1.53,11.01L0,11.01L0,0.23Z" transform="translate(4.77,5.62) translate(-4.77,-5.62)"/>
+        <path id="path-2" d="M17.27,0.23L17.27,11.01L15.74,11.01L15.74,0.23L17.27,0.23Z" transform="translate(16.505,5.62) translate(-16.505,-5.62)"/>
+        <path id="path-3" d="M33.48,11.01L32.31,11.01C32.26,10.74,32.19,9.89,32.19,9.42C31.48,10.57,30.37,11.24,28.26,11.24C24.86,11.24,22.78,9.01,22.78,5.65C22.78,2.48,24.94,0,28.53,0C31.75,0,33.13,1.64,33.54,3.23L31.96,3.23C31.55,2.21,30.61,1.24,28.51,1.24C25.81,1.24,24.38,3.14,24.38,5.55C24.38,8.1,25.82,9.97,28.48,9.97C30.73,9.97,32,8.83,32,6.71L32,6.39L28.51,6.39L28.51,5.1L33.47,5.1L33.47,11.01Z" transform="translate(28.16,5.62) translate(-28.16,-5.62)"/>
+        <path id="path-4" d="M39.27,0.23L40.8,0.23L40.8,4.59L47.28,4.59L47.28,0.23L48.81,0.23L48.81,11.01L47.28,11.01L47.28,5.88L40.8,5.88L40.8,11.01L39.27,11.01L39.27,0.23Z" transform="translate(44.04,5.62) translate(-44.04,-5.62)"/>
+        <path id="path-5" d="M62.99,5.98L56.52,5.98L56.52,9.72L63.66,9.72L63.45,11.01L54.99,11.01L54.99,0.23L63.32,0.23L63.32,1.5L56.52,1.5L56.52,4.69L62.99,4.69L62.99,5.98Z" transform="translate(59.325,5.62) translate(-59.325,-5.62)"/>
+        <path id="path-6" d="M71.96,1.52L67.84,1.52L67.84,0.23L77.59,0.23L77.59,1.52L73.49,1.52L73.49,11.01L71.96,11.01L71.96,1.52Z" transform="translate(72.715,5.62) translate(-72.715,-5.62)"/>
+        <path id="path-7" d="M85.84,1.52L81.72,1.52L81.72,0.23L91.47,0.23L91.47,1.52L87.37,1.52L87.37,11.01L85.84,11.01L85.84,1.52Z" transform="translate(86.595,5.62) translate(-86.595,-5.62)"/>
     </g>
     <script><![CDATA[/*
  KeyshapeJS v1.1.1 (c) 2018-2021 Pixofield Ltd | pixofield.com/keyshapejs/mit-license */
